Modernize Quarkus Petclinic (#31)
* Modernize Quarkus Petclinic

Signed-off-by: Patrick Baumgartner <contact@patbaumgartner.com>

* Fix Owner formatting

---------

Signed-off-by: Patrick Baumgartner <contact@patbaumgartner.com>